--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,10 +3,10 @@ project:
   output-dir: docs
 
 book:
-  title: "Armein Z. R. Langi"
+  title: "Mahesa Fadhillah Andre"
   subtitle: "Portfolio Asesmen II-2100 KIPP"
-  author: "131902360 Armein Z R Langi"
-  date: "9/15/2025"
+  author: "13523140 Mahesa Fadhillah Andre"
+  date: "10/31/2025"
   chapters:
     - index.qmd
     - All_About_me/index.qmd
